Fixed css links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Optics</title>
 
-    <link rel="stylesheet" type="text/css" href="node_modules/bulma/css/bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="bulma.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="old.css" />
 </head>
 
