Started refraction page.

--- a/reflection.html
+++ b/reflection.html
@@ -41,7 +41,8 @@
 
                         <br/>
                         <br/>
-                        <h6 class="subtitle has-text-centered"> θ<sub>i</sub> = θ<sub>r</sub>
+<h6 class="subtitle has-text-centered">
+    <pre>θ<sub>i</sub> = θ<sub>r</sub></pre>
                         </h6>
 
                     </blockquote>
