--- a/refraction.html
+++ b/refraction.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Optics</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bulma.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="old.css" />
 </head>
