--- a/refraction.html
+++ b/refraction.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Optics</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bulma.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="old.css" />
 </head>
@@ -24,7 +24,9 @@
 
             </div>
         </nav>
-        <section class="section">
+    </div>
+    <section class="section">
+        <div class="container">
             <div class="columns">
                 <div class="explanation column">
                     <h3 class="title">Refraction</h3>
@@ -46,14 +48,14 @@
                         </h6>
                     </blockquote>
                 </div>
-                <div class="column" id="ior">
+                <div class="column sim-container" id="ior">
                 </div>
             </div>
             <div class="columns">
                 <div class="explanation column">
                     <h3 class="title">Focusing Light, Part 2</h3>
                 </div>
-                <div class="column" id="focus_lens"></div>
+                <div class="column sim-container" id="focus_lens"></div>
             </div>
             <div class="columns">
                 <div class="explanation column">
@@ -83,10 +85,11 @@
                 <div class="explanation column">
                     <h3 class="title">Playground</h3>
                 </div>
-                <div class="column" id="refraction_test"></div>
+                <div class="column sim-container" id="refraction_test"></div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
+
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="geometry.js"></script>
