Some refraction updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="columns">
                     <div class="column explanation">
-                        <!-- <h3 class="title">Optics!</h3> -->
+                        <h3 class="title">Optics</h3>
                         <p>
                             Optics is the physics of light. It describes, alongside other phenomena, how light can be reflected by mirrors, and bent
                             (refracted) by materials like glass or water.
@@ -41,7 +41,7 @@
                         <p>
                             After that, you can move on to
                             <a href="reflection.html">reflection,</a>
-                            or skip straight ahead to a different topic in the navbar above.
+                            or skip straight ahead to <a href="refraction.html">refraction</a>.
                         </p>
                     </div>
                     <div id="refraction_test" class="column sim-container"></div>
