--- a/reflection.html
+++ b/reflection.html
@@ -80,9 +80,7 @@
                         Instead, it only reflects
                         <b id="percent-reflectance">50%</b> of the light that hits it. It lets another
                         <b id="percent-transmission">10%</b> through, and the absorbs the other
-                        <b id="percent-absorbance">40%</b>. The absorbed light gets turned into heat, which can melt mirrors.
-                    </p>
-                    <p>
+                        <b id="percent-absorbance">40%</b>. The absorbed light gets turned into heat.
                         Real mirrors tend to have reflectances within 80% - 99%.
                     </p>
                 </div>
