--- a/refraction.html
+++ b/refraction.html
@@ -72,6 +72,7 @@
                 </div>
                 <div class="column sim-container">
                     <div id="refraction_flat"></div>
+                    <br/>
                     <table align="center" class="table is-bordered">
                         <thead>
                             <tr style="background-color:rgba(211,211,211,0.4)">
@@ -172,6 +173,13 @@
                     </p>
                 </div>
                 <div class="column sim-container" id="oneway"></div>
+            </div>
+            <div class="columns">
+                <div class="explanation column">
+                    <h3 class="title">Total Internal Reflection</h3>
+                    <h3 class="subtitle">Binoculars</h3>
+                </div>
+                <div class="column"></div>
             </div>
             <div class="columns">
                 <div class="explanation column">
